  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2005/07/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_CryptKey_SetKeySpec()
- added gct-tool command "readkey"
- added blowfish encryption/decryption when using OpenSSL
- function GWEN_PluginDescription_GetLongDescrByFormat() now tries to find
  the localized version of the long description
- added gct-tool command "changepin"
- bufferedio: Now uses severity "error" instead of "warn" in some places
- fixed a bug in error.c
- GWEN_Error_GetSimpleCode() now reacts on warnings, too


2005/07/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added type GWEN_CRYPTTOKEN_CONTEXTTYPE


2005/07/21: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_TLV_create()
- added function GWEN_TLV_toBuffer()
- added function GWEN_TLV_DirectlyToBuffer()
- added function GWEN_PluginDescription_dup()
- added function GWEN_PluginManager_GetPluginDescr()
- csv-plugin: Now returns GWEN_DBIO_CheckFileResultUnknown instead of
  GWEN_DBIO_CheckFileResultOk. This will allow AqBanking to also present
  other plugins when searching for importers
- added crypttoken plugin for OpenHBCI key files
- added tool "gct-tool" for administration of ctypt tokens


2005/07/19: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- continued work on crypt token
- added function GWEN_GetInstallPath()
- added function GWEN_GetPluginPath()
- stuff from crypt2 is now included into the main lib


2005/07/11: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in XML writing code (don't write "/>" for header tags)