@@ -38,7 +38,7 @@
 
 #define GWEN_MSGENGINE_CHARSTOESCAPE ":+\"\'"
 #define GWEN_MSGENGINE_DEFAULT_GROUPDELIM ":"
-#define GWEN_MSGENGINE_DEFAULT_DELIMITERS ":+\"\'"
+#define GWEN_MSGENGINE_DEFAULT_DELIMITERS ":+\'"
 #define GWEN_MSGENGINE_VARNAME_WIDTH  30
 #define GWEN_MSGENGINE_TYPENAME_WIDTH 10
 
