@@ -2,6 +2,13 @@
   !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
   ------------------------------------------------------------------------
 
+2005/07/27: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- GWEN_BufferedIO_ReadRawForced() now returns an error (not a warning) when
+  only partial data has been read
+- GWEN_MsgEngine: removed '"' from list of default delimiters
+
+
 2005/07/26: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - added function GWEN_CryptKey_SetKeySpec()
